# tablet-assist

./: Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: agent.rs  args.rs  config.rs  error.rs  input.rs  lib.rs  main.rs  types.rs  xclient.rs  xorg.rs
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
data/: tablet-assist-agent.service  tablet-assist.desktop  tablet-assist.service  tablet.assist.Agent.service  tablet.assist.Service.service
service/: Cargo.toml
service/data/: dbus.conf  dbus.service.in  service.in
service/src/: args.rs  config.rs  error.rs  iio_iface.rs  input.rs  input_iface.rs  lib.rs  main.rs  service.rs  types.rs
tablet-assist/: Cargo.toml
tablet-assist/data/: dbus.conf  service.in
tablet-assist/src/: config.rs  error.rs  input.rs  main.rs
ui/: Cargo.toml
ui/i18n/: en.toml  ru.toml
ui/src/: args.rs  main.rs
