[workspace]
resolver = "2"
members = ["service", "agent", "ui"]

[workspace.dependencies]
thiserror = "1"
tracing = "0.1"
tracing-journald = "0.3"
libc = "0.2"
argp = "0.3"
smol = "2"
smol-potat = "1"
async-signal = "0.2"
signal-hook = "0.3"
#zbus = "3"
dirs = "5"
toml = "0.8"
input = "0.8"
udev = "0.8"
glam = "0.25"
x11rb-async = "0.13"
appindicator3 = "0.3"
gtk = "0.18"
glib = "0.18"

tablet-assist-service.path = "service"
tablet-assist-agent.path = "agent"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.zbus]
git = "https://github.com/katyo/zbus"
branch = "derive-value-enum"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[profile.release]
opt-level = "z"
#debug = "limited"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
#panic = "abort"
incremental = false
codegen-units = 1
