[package]
name = "tablet-assist-agent"
description = "Tablet-mode assistance DBus session service."
keywords = ["tablet", "laptop", "convertible", "orientation", "usability"]
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
argp.workspace = true
smol.workspace = true
smol-potat.workspace = true
async-signal.workspace = true
signal-hook.workspace = true
zbus.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
tablet-assist-service.workspace = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[target.'cfg(unix)'.dependencies.tracing-journald]
workspace = true
optional = true

[dependencies.x11rb-async]
workspace = true
features = ["randr", "xinput"]

[features]
default = ["stderr", "journal"]
stderr = ["tracing-subscriber"]
journal = ["tracing-subscriber", "tracing-journald"]
