[package]
name = "tablet-assist-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
zbus = "3"
log = "0.4"

[dependencies.tablet-assist-core]
path = "../core"

[features]
default = ["iio-sensor-proxy"]
iio-sensor-proxy = ["tablet-assist-core/iio-sensor-proxy"]
