[package]
name = "tablet-assist-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zvariant]
version = "3"

[dependencies.serde]
version = "1"
features = ["derive"]

[features]
default = ["iio-sensor-proxy"]
iio-sensor-proxy = []
