[package]
name = "tablet-assist-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
tracing.workspace = true
argp.workspace = true
libc.workspace = true
smol.workspace = true
smol-potat.workspace = true
async-signal.workspace = true
signal-hook.workspace = true
zbus.workspace = true
serde.workspace = true
toml.workspace = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[target.'cfg(unix)'.dependencies.tracing-journald]
workspace = true
optional = true

[dependencies.input]
workspace = true
optional = true

[dependencies.udev]
workspace = true
optional = true

[dependencies.glam]
workspace = true
optional = true

[features]
default = ["input", "iio", "stderr", "journal"]
iio = ["udev", "glam"]
stderr = ["tracing-subscriber"]
journal = ["tracing-subscriber", "tracing-journald"]
