[package]
name = "tablet-assist-service"
description = "Tablet-mode assistance DBus system service."
keywords = ["tablet", "laptop", "convertible", "orientation", "usability"]
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
argp.workspace = true
libc.workspace = true
smol.workspace = true
smol-potat.workspace = true
async-signal.workspace = true
signal-hook.workspace = true
zbus.workspace = true
serde.workspace = true
toml.workspace = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[target.'cfg(unix)'.dependencies.tracing-journald]
workspace = true
optional = true

[dependencies.input]
workspace = true
optional = true

[dependencies.udev]
workspace = true
optional = true

[dependencies.glam]
workspace = true
optional = true

[features]
default = ["input", "iio", "stderr", "journal"]
iio = ["udev", "glam"]
stderr = ["tracing-subscriber"]
journal = ["tracing-subscriber", "tracing-journald"]
