[package]
name = "tablet-assist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
argp = "0.3"
input = "0.8"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
smol = "1"
smol-potat = "1"
async-io = "2"
async-signal = "0.2"
signal-hook = "0.3"
zbus = "3"
toml = "0.8"

[dependencies.serde]
version = "1"
features = ["derive"]
