[package]
name = "tablet-assist-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
zbus.workspace = true
smol.workspace = true
appindicator3.workspace = true
gtk.workspace = true
glib.workspace = true
tablet-assist-agent.workspace = true
