[package]
name = "tablet-assist-ui"
version = "0.1.0"
description = "Tablet-mode assistance Gtk-based indicator UI."
authors = ["K. <kayo@illumium.org>"]
homepage = "https://github.com/katyo/tablet-assist"
repository = "https://github.com/katyo/tablet-assist"
license = "MIT"
keywords = ["tablet", "laptop", "convertible", "orientation", "usability"]
edition = "2021"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
argp.workspace = true
zbus.workspace = true
smol.workspace = true
appindicator3.workspace = true
gtk.workspace = true
glib.workspace = true
sys-locale.workspace = true
rust-i18n.workspace = true
tablet-assist-agent.workspace = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[features]
default = ["stderr"]
stderr = ["tracing-subscriber"]
exit = []
settings = []
