[package]
name = "tablet-assist-ui"
description = "Tablet-mode assistance Gtk-based indicator UI."
keywords = ["tablet", "laptop", "convertible", "orientation", "usability"]
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
argp.workspace = true
zbus.workspace = true
smol.workspace = true
appindicator3.workspace = true
gtk.workspace = true
glib.workspace = true
sys-locale.workspace = true
rust-i18n.workspace = true
tablet-assist-agent.workspace = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[features]
default = ["stderr"]
stderr = ["tracing-subscriber"]
exit = []
settings = []
